--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,9 +42,6 @@
     <string name="address_entertainment_EmpireState">Address:\n350 5th Ave, New York, NY 10118</string>
 
 
-
-
-
     <string name="description_Brooklyn_Bridge">Description:\nThe Brooklyn Bridge is a hybrid
         cable-stayed/suspension bridge in New York City and is one of the oldest bridges of
         either type in the United States. Completed in 1883, it connects the boroughs of Manhattan
@@ -105,6 +102,14 @@
     <string name="description_Empire_State">The Empire State Building is a 102-story skyscraper located
         on Fifth Avenue between West 33rd and 34th Streets in Midtown, Manhattan, New York City. </string>
 
+    <string name="Ichiran_Info">Japanese Ramen</string>
+    <string name="WonjoTitle">New Wonjo</string>
+    <string name="WonjoInfo">Korean BBQ</string>
+    <string name="JoesTitle">Joe\'s Pizza</string>
+    <string name="JoesInfo">Italian</string>
+    <string name="HagiTitle">Sake Bar Hagi</string>
+    <string name="IchiranTitle">Ichiran</string>
+    <string name="HagiInfo"><![CDATA[Japanese Beer & Sake]]></string>
 
 
 </resources>
